# mccord.dev

./: stack.yaml
.github/workflows/: haskell.yaml
mccord-dev/: mccord-dev.cabal
mccord-dev-engine/: mccord-dev-engine.cabal
mccord-dev-engine/app/: Main.hs
mccord-dev-engine/lib/McCord/: Web.hs
mccord-dev/lib/McCord/Web/: Foo.hs
