cabal-version: 2.4
name:          mccord-dev-engine
version:       0.1.0.0
license:       NONE
author:        Alexander McCord
maintainer:    alex@mccord.dev
synopsis:      The engine that runs the McCord website
category:      Web

executable mccord-dev-engine
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs

    build-depends: base >= 4.14 && < 5
                 , mccord-dev
