cabal-version: 2.4
name:          mccord-dev
version:       0.1.0.0
license:       NONE
author:        Alexander McCord
maintainer:    alex@mccord.dev
synopsis:      Interface to the mccord-dev backend
category:      Web

library
    default-language: Haskell2010
    hs-source-dirs:   lib

    build-depends: base >= 4.14 && < 5

    exposed-modules: McCord.Web
                     McCord.Web.Foo
