cabal-version: 2.4
name:          mccord-dev
version:       0.1.0.0
license:       NONE
author:        Alexander McCord
maintainer:    alex@mccord.dev
synopsis:      The binary that contains various utilities, primarily runs the web.
category:      Web

executable mccord-dev
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs

    build-depends: base >= 4.14 && < 5
                 , mccord-dev-engine
